# weui

./: Cargo.toml  README.md  output.html  test_closure.rs  tmp_closure.rs
assets/: theme.css
examples/: README.md  basic.rs  html.rs  http.rs
src/: lib.rs  theme.rs
src/components/: actionsheet.rs  badge.rs  button.rs  cell.rs  checkbox.rs  dialog.rs  divider.rs  form.rs  grid.rs  icon.rs  input.rs  mod.rs  navbar.rs  overlay.rs  picker.rs  popup.rs  search.rs  slider.rs  spinner.rs  switch.rs  tabbar.rs  tag.rs  toast.rs  uploader.rs
src/styles/: mod.rs  theme.rs
src/utils/: helpers.rs  html.rs  mod.rs
tests/: html_page.rs
