[package]
name = "weui"
version = "0.1.0"
authors = ["Rebon402"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node", "Window", "EventTarget", "Event", "MouseEvent", "KeyboardEvent", "InputEvent", "HtmlInputElement", "HtmlButtonElement", "HtmlDivElement", "HtmlSpanElement", "CssStyleDeclaration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[dev-dependencies]
wasm-bindgen-test = "0.3"