[package]
name = "weui"
version = "0.1.0"
authors = ["Rebon402"]
edition = "2024"
description = "A Rust-driven WeUI utility crate for generating HTML, CSS, and Leptos-friendly UI themes."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/Rebon402/weui"
homepage = "https://github.com/Rebon402/weui"
documentation = "https://docs.rs/weui"
keywords = ["weui", "rust", "leptos", "html", "css", "ui", "web"]
categories = ["web-programming"]

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]

[dependencies]
leptos = { version = "0.6", features = ["nightly", "ssr"] }
leptos_meta = { version = "0.6" }
leptos_router = { version = "0.6" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Node", "Window", "EventTarget", "Event", "MouseEvent", "KeyboardEvent", "InputEvent", "HtmlInputElement", "HtmlButtonElement", "HtmlDivElement", "HtmlSpanElement", "CssStyleDeclaration", "DomTokenList", "HtmlCollection", "NodeList", "HtmlLabelElement", "HtmlUListElement", "HtmlLiElement", "HtmlAnchorElement", "HtmlImageElement", "SvgElement", "HtmlTemplateElement", "ShadowRoot", "ShadowRootInit", "ShadowRootMode", "CustomElementRegistry", "HtmlSlotElement"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"